# Sparton_AHRS_M1_Driver

./: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp  rotations.cpp  save.cpp
include/sparton_ahrs_m1_driver/: SyncSerial.hpp  sparton_ahrs_m1_driver.hpp
src/: main.cpp  sparton_ahrs_m1_driver.cpp
